--- a/angular.json
+++ b/angular.json
@@ -63,6 +63,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "proxyConfig": "proxy.conf.json"
+          },
           "configurations": {
             "production": {
               "buildTarget": "CA_RS11_P05_Angular_ClaudiaSouza:build:production"
