--- a/angular.json
+++ b/angular.json
@@ -88,7 +88,7 @@
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
-              "src/favicon.ico",
+              "public/favicon.ico",
               "src/assets"
             ],
             "styles": [
